# Task-Manager-App-1

./: READ.md  db.sqlite3  docker-compose.yaml  package-lock.json  package.json  prometheus.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  cicd.yml  deploy.yml
client/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  api.js  index.css
client/src/components/: Board.jsx  Card.jsx  Header.jsx  Hero.jsx  List.jsx
client/src/pages/: Register.jsx
proxy/: default.conf
server/: Dockerfile  db.sqlite3  pyproject.toml
server/server_config/: settings.py  urls.py
server/task/: models.py  serializers.py  urls.py  views.py
server/task/migrations/: 0001_initial.py
server/user/: models.py  serializers.py  urls.py  views.py
