[project]
name = "task-manager-app-1"
version = "2.3.1"
description = "POETRY"
authors = [
    {name = "jocyeperelle",email = "perellepouokam@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.2.1,<6.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
